# Q4_25_Accel_GauravBurande

./: .gitignore  .gitmodules  README.md
accel-pinocchio-escrow/: README.md
accel-pinocchio-escrow/src/: lib.rs
accel-pinocchio-escrow/src/instructions/: cancel.rs  make.rs  mod.rs  take.rs
accel-pinocchio-escrow/src/state/: escrow.rs
accel-pinocchio-escrow/src/tests/: mod.rs
escrow-litesvm/: .gitignore  Anchor.toml  README.md  pnpm-lock.yaml
escrow-litesvm/programs/anchor-escrow/: Cargo.toml
fundraiser/: Cargo.toml  README.md
fundraiser/src/: constant.rs  lib.rs
fundraiser/src/instructions/: collect.rs  contribute.rs  initialize.rs  mod.rs  refund.rs
magicblock-er-example/: .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml
magicblock-er-example/tests/: er-state-account.ts
magicblock-solana-ai-oracle/: Anchor.toml  README.md  pnpm-lock.yaml
magicblock-solana-ai-oracle/programs/magicblock-solana-ai-oracle/: Cargo.toml
magicblock-solana-ai-oracle/programs/magicblock-solana-ai-oracle/src/: lib.rs
magicblock-solana-ai-oracle/tests/: magicblock-solana-ai-oracle.ts
switchboard-example/: README.md
switchboard-example/feed_onchain/: Anchor.toml
switchboard-example/feed_onchain/programs/feed_onchain/: Cargo.toml
switchboard-example/feed_onchain/programs/feed_onchain/src/: lib.rs
switchboard-example/scripts/: consume-feed.ts  create-feed.ts  package.json  simulate-feed.ts
whitelist-transfer-hook/: Anchor.toml  package.json  pnpm-lock.yaml
whitelist-transfer-hook/tests/: whitelist-transfer-hook.ts
(+21 files in other folders)
